IMAP-Resource: cancelTask on error and deferTask on connection error.

This way the resource retries if there was a temporary connection
problem and reports the problem instead of silently going offline.

BUG: 297783